Ávazan IA avanza libertad

--- a/PeleasSuizas/Assembly-CSharp.csproj
+++ b/PeleasSuizas/Assembly-CSharp.csproj
@@ -41,12 +41,12 @@
      <Compile Include="Assets\Scripts\AtaqueCortaDistancia2.cs" />
      <Compile Include="Assets\Scripts\VidaPJ1.cs" />
      <Compile Include="Assets\Scripts\Movimiento.cs" />
+     <Compile Include="Assets\Scripts\testeosNacho\VidaIa.cs" />
      <Compile Include="Assets\ScripstsMCharacter\Iniciopeleita2.cs" />
      <Compile Include="Assets\Scripts\SelectorScript\MenuSeleccionDePersonas.cs" />
      <Compile Include="Assets\ScripstsMCharacter\GameManager.cs" />
      <Compile Include="Assets\ScripstsMCharacter\CHARACTER.cs" />
      <Compile Include="Assets\Scripts\SelectorScript\Personaje.cs" />
-     <Compile Include="Assets\Scripts\testeosNacho\ComboPJ01.cs" />
      <Compile Include="Assets\Scripts\SelectorScript\GameMMMMANAGER.cs" />
      <Compile Include="Assets\ScripstsMCharacter\MSO2.cs" />
      <Compile Include="Assets\Scripts\VidaPJ2.cs" />
@@ -55,13 +55,12 @@
      <Compile Include="Assets\Scripts\SelectorScript\InicioJugador1.cs" />
      <Compile Include="Assets\Scripts\comboPJ2.cs" />
      <Compile Include="Assets\InstanciarAtaqueDistancia.cs" />
+     <Compile Include="Assets\Scripts\testeosNacho\MovimientoIA.cs" />
      <Compile Include="Assets\Scripts\SelectorScript\InicioJugador2.cs" />
      <Compile Include="Assets\Scripts\AtaqueCortaDistancia.cs" />
      <Compile Include="Assets\Scripts\CRonrdas.cs" />
      <Compile Include="Assets\AtaqueLargaDistancia.cs" />
      <Compile Include="Assets\Scripts\Movimiento2.cs" />
-     <Compile Include="Assets\Scripts\testeosNacho\Ataqueadistancia.cs" />
-     <Compile Include="Assets\Scripts\testeosNacho\VidaIa.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
